@@ -16,3 +16,11 @@ engine          /usr/bin
 
 # Just to feed ./postgresql-setup --upgrade-ids help output
 description     "In-place upgrade from Fedora 19 (PostgreSQL 9.2)"
+
+# What software collections must be enabled for successful upgrade.
+scls            "postgresql92"
+
+# Red Hat back-patches unix_socket_directories into major versions 9.2+, which
+# is different from upstream (9.3+).  You may need to let pg_upgrade know that
+# it works against server 9.2 built by Red Hat.
+redhat_sockets_hack  yes
